--- a/imagens-de-fundo/exercicio03/style.css
+++ b/imagens-de-fundo/exercicio03/style.css
@@ -1,3 +1,23 @@
 @charset "UTF-8";
 
-bo
+.pai {
+    background-color: rgb(150, 118, 118);
+    background-image: url(../img/target001.png);
+    width: 700px;
+    height: 97vh;
+    background-size: 100% 100%;
+    position: relative;
+    
+}
+
+.filho {
+    background-color: #692020;
+    width: 250px;
+    height: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+    
+}
